# exchange

./: .env.example  Cargo.toml  README.md
api/: Cargo.toml
api/src/: entrypoint.rs  errors.rs  main.rs
api/src/handlers/: health.rs  mod.rs  order.rs
api/src/handlers/depth/: mod.rs
api/src/handlers/order/: cancel.rs  cancel_all.rs  create.rs  mod.rs  open_orders.rs
api/src/handlers/trade/: mod.rs
api/src/handlers/user/: balance.rs
api/src/services/: redis.rs
api/src/utils/: engine_res_wrapper.rs  mod.rs  observer.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/channel/: mod.rs
common/src/message/: api.rs  db_filler.rs  engine.rs  message_from_api.rs  message_from_engine.rs  mod.rs  ws.rs
common/src/types/: error.rs  order.rs
db_filler/: Cargo.toml
db_filler/src/: main.rs
db_filler/src/services/: db.rs  redis.rs
db_filler/src/store/: order.rs  trade.rs
engine/: Cargo.toml
engine/src/: engine.rs  errors.rs  main.rs  order.rs  orderbook.rs  user.rs
engine/src/services/: redis.rs
store/: Cargo.toml
store/migrations/: 20250629075332_init.down.sql  20250629075332_init.up.sql  20250629092709_refactor_enum_types.down.sql  20250629092709_refactor_enum_types.up.sql
store/src/: lib.rs  order.rs  trade.rs
wss/: Cargo.toml
wss/src/: lib.rs  main.rs  redis.rs  user.rs
