[workspace]
"resolver" = "3"
members = ["api", "common", "db_filler", "engine", "store"]

[workspace.dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
derive_more = "2.0.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
r2d2 = "=0.6.0"
r2d2_redis = "0.14.0"
redis = {version = "0.32.0", features = ["r2d2", "tokio-comp"]}
uuid = {version = "1.17.0" , features = ["v4"]}
rust_decimal = {version = "1.37" , features = ["macros"]}
thiserror = "2.0.12"
tokio = {version = "1.45.1", features = ["full"]}
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio"]}
common = {path = "./common"}
