[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true } 
dotenv = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
common ={ workspace = true}
redis = { workspace = true }
uuid ={ workspace = true }
r2d2 = { workspace = true }
r2d2_redis = { workspace = true }
rust_decimal = {workspace = true}
sqlx = { workspace = true }
store ={ workspace = true }