[package]
name = "db_filler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { workspace = true }
common = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
store = {workspace = true}