[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]

common = { workspace = true }
redis = { workspace = true }
r2d2_redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
thiserror = {workspace = true}
chrono = { workspace = true }